<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        schema::create('categories', function (Blueprint $table){
            $table->id();
            $table->string('name');
            $table->integer('colocation_id')->nullable();
        });
    }
    public function down(): void
    {
        schema::dropIfExists('categories');
    }
};
