classDiagram
    class User {
        -name : string
        -email: string
        -password: string
        -current_colocation_id: int
        -reputation_score: int
        -is_admin: boolean
        -is_banned: boolean
        +register()
        +login()
        +updateProfile()
    }

    class Colocation {
        -name: string
        -status: enum "active, canceled"
        -role: enum "owner, member"
        -token: string
        -created_at: DATETIME
        -cancelled_at: DATETIME
        +create()
        +cancel()
        +calculateBalances()
    }

    class Membership {
        -join_at: DATE
        -left_at: DATE
        -balance_at_exit: float
        -status: enum "pending, join"
        +leave()
        +removeMember()
    }

    class Expense {
        -title:string
        -amount: float
        -date: date
        +add()
        +delete()
        +filterByMonth()
    }

    class Category {
        +string name
        +add()
        +delete()
    }

    class Payment {
        -name:string
        -amount: float
        -is_payed: boolean
        -date: date
        +markAsPaid()
    }

    class Invitation {
        -email:string
        -token: string
        +generateToken()
        +sendEmail()
    }

    User -- "*" Payment : creditor
    User -- "*" Payment : debtor
    User -- "*" Expense : payer
    Membership "*" -- "*" Colocation
    User "*" -- "*" Colocation
    User * -- "*" Colocation : owned by
    Expense -- "*" Category
    Colocation * -- "*" Category
    Membership "*" -- "*" User
    Colocation * -- "*" Expense
    Colocation * -- "*" Invitation
